syntax = "proto3";

import "google/protobuf/timestamp.proto";

package user;

 enum ROLE {
    OPERATOR = 0;
    LINE_SUPERINTENDENT = 1;
    UNIT_SUPERINTENDENT = 2;
}

 enum USER_STATUS {
    active = 0;
    inactive = 1;
}

message CreateUserRequest {
    string email = 1;
    string recoveryEmail = 2;
    string password = 3;
    ROLE role = 4;
    string license = 5;
    string company = 6;
    string description = 7;
    string name = 8;
    string pictureUrl = 9;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message VerifyEmailRequest {
    string token = 1;
}

message Company {
    string id = 1;
    string name = 2;
    string description = 3;
}

message ResendVerificationEmailRequest {
    string email = 1;
}

message ResendVerificationEmailResponse {
    string email = 1;
    string name = 2;
    string company = 3;
    string token = 4;
}

message ForgotPasswordRequest {
    string email = 1;
}

message ResetPasswordRequest {
    string token = 1;
    string password = 2;
}

message UpdatePasswordRequest {
    string password = 1;
    string newPassword = 2;
    string id = 3;
}

message UpdateUserRequest {
    string id = 1;
    string email = 2;
    string recoveryEmail = 3;
    string role = 4;
    string name = 5;
    string pictureUrl = 6;
}

message MinimalUserResponse {
    string email = 1;
    string name = 2;
    ROLE role = 3;
    string id = 4;
    string company = 5;
    USER_STATUS status = 6;
    bool emailVerified = 7;
    string lastLogin = 8;
    string pictureUrl = 10;
}

message UserResponse {
    string email = 1;
    string recoveryEmail = 2;
    ROLE role = 3;
    string id = 6;
    string createdAt = 7;
    string updatedAt = 8;
    string company = 9;
    string token = 10;
    USER_STATUS status = 11;
    bool emailVerified = 12;
    string lastLogin = 13;
    string name = 14;
    string pictureUrl = 15;
}



message LoginUserResponse {
    string email = 1;
    string recoveryEmail = 2;
    ROLE role = 3;
    string id = 6;
    string createdAt = 7;
    string updatedAt = 8;
    string token = 10;
    USER_STATUS status = 11;
    bool emailVerified = 12;
    string lastLogin = 13;
    string name = 14;
    string pictureUrl = 15;
    string companyName = 16;
    string companyDescription = 17;
    string companyId = 18;
}

service UserService {
    rpc createUser (CreateUserRequest) returns (UserResponse);
    rpc login (LoginUserRequest) returns (LoginUserResponse);
    rpc verifyEmail (VerifyEmailRequest) returns (UserResponse);
    rpc resendVerificationEmail (ResendVerificationEmailRequest) returns (ResendVerificationEmailResponse);
    rpc forgotPassword (ForgotPasswordRequest) returns (ResendVerificationEmailResponse);
    rpc resetPassword (ResetPasswordRequest) returns (MinimalUserResponse);
    rpc updatePassword (UpdatePasswordRequest) returns (MinimalUserResponse);
    rpc updateUser (UpdateUserRequest) returns (MinimalUserResponse);
}